attached_assets/Pasted--Info-Successfully-preconnected-to-https-fonts-googleapis-com-Info-Successfully-preconnected-t-1756349107005_1756349107005.txt
[Info] Successfully preconnected to https://fonts.googleapis.com/
[Info] Successfully preconnected to https://fonts.gstatic.com/
[Debug] [vite] connecting... (client, line 495)
[Debug] [vite] connected. (client, line 618)
[Error] Warning: React has detected a change in the order of Hooks called by StudyInterface. This will lead to bugs and errors if not fixed. For more information, read the Rules of Hooks: https://reactjs.org/link/rules-of-hooks

   Previous render            Next render
   ------------------------------------------------------
1. useState                   useState
2. useEffect                  useEffect
3. useContext                 useContext
4. useState                   useState
5. useState                   useState
6. useState                   useState
7. useState                   useState
8. useState                   useState
9. useState                   useState
10. useState                  useState
11. useState                  useState
12. useState                  useState
13. useState                  useState
14. useContext                useContext
15. useContext                useContext
16. useContext                useContext
17. useEffect                 useEffect
18. useState                  useState
19. useCallback               useCallback
20. useSyncExternalStore      useSyncExternalStore
21. useEffect                 useEffect
22. useEffect                 useEffect
23. useContext                useContext
24. useState                  useState
25. useEffect                 useEffect
26. useCallback               useCallback
27. useSyncExternalStore      useSyncExternalStore
28. useCallback               useCallback
29. useState                  useState
30. useState                  useState
31. useEffect                 useEffect
32. useEffect                 useEffect
33. undefined                 useState
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

StudyInterface@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/src/components/StudyInterface.tsx:89:55
div
Home@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/src/pages/home.tsx:23:65
Route@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:323:20
Switch@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:379:25
Router
TooltipProviderProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-XIZKKOCE.js:22:52
TooltipProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js:63:12
ThemeProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/src/components/ThemeProvider.tsx:20:41
QueryClientProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js:2805:9
App
	printWarning (chunk-WERSD76P.js:521)
	error (chunk-WERSD76P.js:505)
	warnOnHookMismatchInDev (chunk-WERSD76P.js:11495)
	updateHookTypesDev (chunk-WERSD76P.js:11465)
	useState (chunk-WERSD76P.js:12749)
	StudyInterface (StudyInterface.tsx:1027)
	renderWithHooks (chunk-WERSD76P.js:11548)
	updateFunctionComponent (chunk-WERSD76P.js:14582)
	beginWork$1 (chunk-WERSD76P.js:19753)
	performUnitOfWork (chunk-WERSD76P.js:19198)
	workLoopSync (chunk-WERSD76P.js:19137)
	renderRootSync (chunk-WERSD76P.js:19116)
	performSyncWorkOnRoot (chunk-WERSD76P.js:18874)
	flushSyncCallbacks (chunk-WERSD76P.js:9119)
	(anonymous function) (chunk-WERSD76P.js:18627)
[Error] Error: Rendered more hooks than during the previous render.
	updateWorkInProgressHook (chunk-WERSD76P.js:11678:87)
	updateReducer (chunk-WERSD76P.js:11727)
	useState (chunk-WERSD76P.js:12753)
	StudyInterface (StudyInterface.tsx:1027)
	renderWithHooks (chunk-WERSD76P.js:11548)
	updateFunctionComponent (chunk-WERSD76P.js:14582)
	callCallback2 (chunk-WERSD76P.js:3674)
	dispatchEvent
	invokeGuardedCallbackDev (chunk-WERSD76P.js:3699)
	invokeGuardedCallback (chunk-WERSD76P.js:3733)
	beginWork$1 (chunk-WERSD76P.js:19765)
	performUnitOfWork (chunk-WERSD76P.js:19198)
	workLoopSync (chunk-WERSD76P.js:19137)
	renderRootSync (chunk-WERSD76P.js:19116)
	performSyncWorkOnRoot (chunk-WERSD76P.js:18874)
	flushSyncCallbacks (chunk-WERSD76P.js:9119)
	(anonymous function) (chunk-WERSD76P.js:18627)
[Error] Error: Rendered more hooks than during the previous render.
	updateWorkInProgressHook (chunk-WERSD76P.js:11678:87)
	updateReducer (chunk-WERSD76P.js:11727)
	useState (chunk-WERSD76P.js:12753)
	StudyInterface (StudyInterface.tsx:1027)
	renderWithHooks (chunk-WERSD76P.js:11548)
	updateFunctionComponent (chunk-WERSD76P.js:14582)
	callCallback2 (chunk-WERSD76P.js:3674)
	dispatchEvent
	invokeGuardedCallbackDev (chunk-WERSD76P.js:3699)
	invokeGuardedCallback (chunk-WERSD76P.js:3733)
	beginWork$1 (chunk-WERSD76P.js:19765)
	performUnitOfWork (chunk-WERSD76P.js:19198)
	workLoopSync (chunk-WERSD76P.js:19137)
	renderRootSync (chunk-WERSD76P.js:19116)
	recoverFromConcurrentError (chunk-WERSD76P.js:18736)
	performSyncWorkOnRoot (chunk-WERSD76P.js:18879)
	flushSyncCallbacks (chunk-WERSD76P.js:9119)
	(anonymous function) (chunk-WERSD76P.js:18627)
[Error] The above error occurred in the <StudyInterface> component:

StudyInterface@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/src/components/StudyInterface.tsx:89:55
div
Home@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/src/pages/home.tsx:23:65
Route@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:323:20
Switch@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js:379:25
Router
TooltipProviderProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-XIZKKOCE.js:22:52
TooltipProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js:63:12
ThemeProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/src/components/ThemeProvider.tsx:20:41
QueryClientProvider@https://63c23892-536e-4dbc-b8e4-958c02e2f8f8-00-2d94bjtq36wiw.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js:2805:9
App

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.
	logCapturedError (chunk-WERSD76P.js:14032)
	(anonymous function) (chunk-WERSD76P.js:14052)
	callCallback (chunk-WERSD76P.js:11248)
	commitUpdateQueue (chunk-WERSD76P.js:11265)
	commitLayoutEffectOnFiber (chunk-WERSD76P.js:17093)
	commitLayoutMountEffects_complete (chunk-WERSD76P.js:17980)
	commitLayoutEffects_begin (chunk-WERSD76P.js:17969)
	commitLayoutEffects (chunk-WERSD76P.js:17920)
	commitRootImpl (chunk-WERSD76P.js:19353)
	commitRoot (chunk-WERSD76P.js:19277)
	performSyncWorkOnRoot (chunk-WERSD76P.js:18895)
	flushSyncCallbacks (chunk-WERSD76P.js:9119)
	(anonymous function) (chunk-WERSD76P.js:18627)
[Error] Error: Rendered more hooks than during the previous render.
	flushSyncCallbacks (chunk-WERSD76P.js:9129)
	(anonymous function) (chunk-WERSD76P.js:18627)